--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "emoji-suggestions",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@T0ASTMalone/emoji-suggestions",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/T0ASTMalone"
+  },
+  "private": false,
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
