--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@T0ASTMalone/emoji-suggestions",
+  "name": "emoji-suggestions",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/T0ASTMalone"
   },
   "private": false,
-  "version": "0.0.41",
+  "version": "0.0.42",
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -15,18 +15,17 @@
     "build": "rollup -c --bundleConfigAsCjs"
   },
   "dependencies": {
-    "@rollup/plugin-typescript": "^11.1.1",
     "emojibase": "^6.1.0",
     "emojibase-data": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-dts": "^5.3.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
@@ -38,9 +37,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^22.1.0",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
